M1/S7/TL/compilation/autocell/parser.output
   0  $accept : %entry% $end

   1  program : INT DIMENSIONS OF config END opt_statements EOF

   2  config : INT DOT_DOT INT
   3         | fields

   4  fields : field
   5         | fields COMMA field

   6  field : ID OF INT DOT_DOT INT

   7  opt_statements :
   8                 | opt_statements statement

   9  statement : cell ASSIGN expression
  10            | ID ASSIGN expression
  11            | IF condition THEN opt_statements END
  12            | IF condition THEN opt_statements ELSE opt_statements END

  13  cell : LBRACKET INT COMMA INT RBRACKET

  14  operand : cell
  15          | INT
  16          | ID
  17          | LPAR expression RPAR
  18          | SUB operand
  19          | ADD operand

  20  expressionPrio1 : operand
  21                  | expressionPrio1 MUL operand
  22                  | expressionPrio1 DIV operand
  23                  | expressionPrio1 MOD operand

  24  expression : expressionPrio1
  25             | expression ADD expressionPrio1
  26             | expression SUB expressionPrio1

  27  condition : expression LESS expression
  28            | expression GREATER expression
  29            | expression LESSEQ expression
  30            | expression GREATEREQ expression
  31            | expression EQUALS expression
  32            | expression DIFF expression

  33  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (33)

	INT  shift 3
	.  error

	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : INT . DIMENSIONS OF config END opt_statements EOF  (1)

	DIMENSIONS  shift 5
	.  error


state 4
	%entry% : '\001' program .  (33)

	.  reduce 33


state 5
	program : INT DIMENSIONS . OF config END opt_statements EOF  (1)

	OF  shift 6
	.  error


state 6
	program : INT DIMENSIONS OF . config END opt_statements EOF  (1)

	ID  shift 7
	INT  shift 8
	.  error

	config  goto 9
	fields  goto 10
	field  goto 11


state 7
	field : ID . OF INT DOT_DOT INT  (6)

	OF  shift 12
	.  error


state 8
	config : INT . DOT_DOT INT  (2)

	DOT_DOT  shift 13
	.  error


state 9
	program : INT DIMENSIONS OF config . END opt_statements EOF  (1)

	END  shift 14
	.  error


state 10
	config : fields .  (3)
	fields : fields . COMMA field  (5)

	COMMA  shift 15
	END  reduce 3


state 11
	fields : field .  (4)

	.  reduce 4


state 12
	field : ID OF . INT DOT_DOT INT  (6)

	INT  shift 16
	.  error


state 13
	config : INT DOT_DOT . INT  (2)

	INT  shift 17
	.  error


state 14
	program : INT DIMENSIONS OF config END . opt_statements EOF  (1)
	opt_statements : .  (7)

	.  reduce 7

	opt_statements  goto 18


state 15
	fields : fields COMMA . field  (5)

	ID  shift 7
	.  error

	field  goto 19


state 16
	field : ID OF INT . DOT_DOT INT  (6)

	DOT_DOT  shift 20
	.  error


state 17
	config : INT DOT_DOT INT .  (2)

	.  reduce 2


state 18
	program : INT DIMENSIONS OF config END opt_statements . EOF  (1)
	opt_statements : opt_statements . statement  (8)

	EOF  shift 21
	LBRACKET  shift 22
	IF  shift 23
	ID  shift 24
	.  error

	statement  goto 25
	cell  goto 26


state 19
	fields : fields COMMA field .  (5)

	.  reduce 5


state 20
	field : ID OF INT DOT_DOT . INT  (6)

	INT  shift 27
	.  error


state 21
	program : INT DIMENSIONS OF config END opt_statements EOF .  (1)

	.  reduce 1


state 22
	cell : LBRACKET . INT COMMA INT RBRACKET  (13)

	INT  shift 28
	.  error


state 23
	statement : IF . condition THEN opt_statements END  (11)
	statement : IF . condition THEN opt_statements ELSE opt_statements END  (12)

	LBRACKET  shift 22
	LPAR  shift 29
	ADD  shift 30
	SUB  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 34
	expression  goto 35
	condition  goto 36
	operand  goto 37
	expressionPrio1  goto 38


state 24
	statement : ID . ASSIGN expression  (10)

	ASSIGN  shift 39
	.  error


state 25
	opt_statements : opt_statements statement .  (8)

	.  reduce 8


state 26
	statement : cell . ASSIGN expression  (9)

	ASSIGN  shift 40
	.  error


state 27
	field : ID OF INT DOT_DOT INT .  (6)

	.  reduce 6


state 28
	cell : LBRACKET INT . COMMA INT RBRACKET  (13)

	COMMA  shift 41
	.  error


state 29
	operand : LPAR . expression RPAR  (17)

	LBRACKET  shift 22
	LPAR  shift 29
	ADD  shift 30
	SUB  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 34
	expression  goto 42
	operand  goto 37
	expressionPrio1  goto 38


state 30
	operand : ADD . operand  (19)

	LBRACKET  shift 22
	LPAR  shift 29
	ADD  shift 30
	SUB  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 34
	operand  goto 43


state 31
	operand : SUB . operand  (18)

	LBRACKET  shift 22
	LPAR  shift 29
	ADD  shift 30
	SUB  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 34
	operand  goto 44


state 32
	operand : ID .  (16)

	.  reduce 16


state 33
	operand : INT .  (15)

	.  reduce 15


state 34
	operand : cell .  (14)

	.  reduce 14


state 35
	expression : expression . ADD expressionPrio1  (25)
	expression : expression . SUB expressionPrio1  (26)
	condition : expression . LESS expression  (27)
	condition : expression . GREATER expression  (28)
	condition : expression . LESSEQ expression  (29)
	condition : expression . GREATEREQ expression  (30)
	condition : expression . EQUALS expression  (31)
	condition : expression . DIFF expression  (32)

	ADD  shift 45
	SUB  shift 46
	LESS  shift 47
	GREATER  shift 48
	LESSEQ  shift 49
	GREATEREQ  shift 50
	EQUALS  shift 51
	DIFF  shift 52
	.  error


state 36
	statement : IF condition . THEN opt_statements END  (11)
	statement : IF condition . THEN opt_statements ELSE opt_statements END  (12)

	THEN  shift 53
	.  error


state 37
	expressionPrio1 : operand .  (20)

	.  reduce 20


state 38
	expressionPrio1 : expressionPrio1 . MUL operand  (21)
	expressionPrio1 : expressionPrio1 . DIV operand  (22)
	expressionPrio1 : expressionPrio1 . MOD operand  (23)
	expression : expressionPrio1 .  (24)

	MUL  shift 54
	DIV  shift 55
	MOD  shift 56
	EOF  reduce 24
	END  reduce 24
	LBRACKET  reduce 24
	RPAR  reduce 24
	ADD  reduce 24
	SUB  reduce 24
	IF  reduce 24
	THEN  reduce 24
	ELSE  reduce 24
	LESS  reduce 24
	GREATER  reduce 24
	LESSEQ  reduce 24
	GREATEREQ  reduce 24
	EQUALS  reduce 24
	DIFF  reduce 24
	ID  reduce 24


state 39
	statement : ID ASSIGN . expression  (10)

	LBRACKET  shift 22
	LPAR  shift 29
	ADD  shift 30
	SUB  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 34
	expression  goto 57
	operand  goto 37
	expressionPrio1  goto 38


state 40
	statement : cell ASSIGN . expression  (9)

	LBRACKET  shift 22
	LPAR  shift 29
	ADD  shift 30
	SUB  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 34
	expression  goto 58
	operand  goto 37
	expressionPrio1  goto 38


state 41
	cell : LBRACKET INT COMMA . INT RBRACKET  (13)

	INT  shift 59
	.  error


state 42
	operand : LPAR expression . RPAR  (17)
	expression : expression . ADD expressionPrio1  (25)
	expression : expression . SUB expressionPrio1  (26)

	RPAR  shift 60
	ADD  shift 45
	SUB  shift 46
	.  error


state 43
	operand : ADD operand .  (19)

	.  reduce 19


state 44
	operand : SUB operand .  (18)

	.  reduce 18


state 45
	expression : expression ADD . expressionPrio1  (25)

	LBRACKET  shift 22
	LPAR  shift 29
	ADD  shift 30
	SUB  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 34
	operand  goto 37
	expressionPrio1  goto 61


state 46
	expression : expression SUB . expressionPrio1  (26)

	LBRACKET  shift 22
	LPAR  shift 29
	ADD  shift 30
	SUB  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 34
	operand  goto 37
	expressionPrio1  goto 62


state 47
	condition : expression LESS . expression  (27)

	LBRACKET  shift 22
	LPAR  shift 29
	ADD  shift 30
	SUB  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 34
	expression  goto 63
	operand  goto 37
	expressionPrio1  goto 38


state 48
	condition : expression GREATER . expression  (28)

	LBRACKET  shift 22
	LPAR  shift 29
	ADD  shift 30
	SUB  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 34
	expression  goto 64
	operand  goto 37
	expressionPrio1  goto 38


state 49
	condition : expression LESSEQ . expression  (29)

	LBRACKET  shift 22
	LPAR  shift 29
	ADD  shift 30
	SUB  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 34
	expression  goto 65
	operand  goto 37
	expressionPrio1  goto 38


state 50
	condition : expression GREATEREQ . expression  (30)

	LBRACKET  shift 22
	LPAR  shift 29
	ADD  shift 30
	SUB  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 34
	expression  goto 66
	operand  goto 37
	expressionPrio1  goto 38


state 51
	condition : expression EQUALS . expression  (31)

	LBRACKET  shift 22
	LPAR  shift 29
	ADD  shift 30
	SUB  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 34
	expression  goto 67
	operand  goto 37
	expressionPrio1  goto 38


state 52
	condition : expression DIFF . expression  (32)

	LBRACKET  shift 22
	LPAR  shift 29
	ADD  shift 30
	SUB  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 34
	expression  goto 68
	operand  goto 37
	expressionPrio1  goto 38


state 53
	statement : IF condition THEN . opt_statements END  (11)
	statement : IF condition THEN . opt_statements ELSE opt_statements END  (12)
	opt_statements : .  (7)

	.  reduce 7

	opt_statements  goto 69


state 54
	expressionPrio1 : expressionPrio1 MUL . operand  (21)

	LBRACKET  shift 22
	LPAR  shift 29
	ADD  shift 30
	SUB  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 34
	operand  goto 70


state 55
	expressionPrio1 : expressionPrio1 DIV . operand  (22)

	LBRACKET  shift 22
	LPAR  shift 29
	ADD  shift 30
	SUB  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 34
	operand  goto 71


state 56
	expressionPrio1 : expressionPrio1 MOD . operand  (23)

	LBRACKET  shift 22
	LPAR  shift 29
	ADD  shift 30
	SUB  shift 31
	ID  shift 32
	INT  shift 33
	.  error

	cell  goto 34
	operand  goto 72


state 57
	statement : ID ASSIGN expression .  (10)
	expression : expression . ADD expressionPrio1  (25)
	expression : expression . SUB expressionPrio1  (26)

	ADD  shift 45
	SUB  shift 46
	EOF  reduce 10
	END  reduce 10
	LBRACKET  reduce 10
	IF  reduce 10
	ELSE  reduce 10
	ID  reduce 10


state 58
	statement : cell ASSIGN expression .  (9)
	expression : expression . ADD expressionPrio1  (25)
	expression : expression . SUB expressionPrio1  (26)

	ADD  shift 45
	SUB  shift 46
	EOF  reduce 9
	END  reduce 9
	LBRACKET  reduce 9
	IF  reduce 9
	ELSE  reduce 9
	ID  reduce 9


state 59
	cell : LBRACKET INT COMMA INT . RBRACKET  (13)

	RBRACKET  shift 73
	.  error


state 60
	operand : LPAR expression RPAR .  (17)

	.  reduce 17


state 61
	expressionPrio1 : expressionPrio1 . MUL operand  (21)
	expressionPrio1 : expressionPrio1 . DIV operand  (22)
	expressionPrio1 : expressionPrio1 . MOD operand  (23)
	expression : expression ADD expressionPrio1 .  (25)

	MUL  shift 54
	DIV  shift 55
	MOD  shift 56
	EOF  reduce 25
	END  reduce 25
	LBRACKET  reduce 25
	RPAR  reduce 25
	ADD  reduce 25
	SUB  reduce 25
	IF  reduce 25
	THEN  reduce 25
	ELSE  reduce 25
	LESS  reduce 25
	GREATER  reduce 25
	LESSEQ  reduce 25
	GREATEREQ  reduce 25
	EQUALS  reduce 25
	DIFF  reduce 25
	ID  reduce 25


state 62
	expressionPrio1 : expressionPrio1 . MUL operand  (21)
	expressionPrio1 : expressionPrio1 . DIV operand  (22)
	expressionPrio1 : expressionPrio1 . MOD operand  (23)
	expression : expression SUB expressionPrio1 .  (26)

	MUL  shift 54
	DIV  shift 55
	MOD  shift 56
	EOF  reduce 26
	END  reduce 26
	LBRACKET  reduce 26
	RPAR  reduce 26
	ADD  reduce 26
	SUB  reduce 26
	IF  reduce 26
	THEN  reduce 26
	ELSE  reduce 26
	LESS  reduce 26
	GREATER  reduce 26
	LESSEQ  reduce 26
	GREATEREQ  reduce 26
	EQUALS  reduce 26
	DIFF  reduce 26
	ID  reduce 26


state 63
	expression : expression . ADD expressionPrio1  (25)
	expression : expression . SUB expressionPrio1  (26)
	condition : expression LESS expression .  (27)

	ADD  shift 45
	SUB  shift 46
	THEN  reduce 27


state 64
	expression : expression . ADD expressionPrio1  (25)
	expression : expression . SUB expressionPrio1  (26)
	condition : expression GREATER expression .  (28)

	ADD  shift 45
	SUB  shift 46
	THEN  reduce 28


state 65
	expression : expression . ADD expressionPrio1  (25)
	expression : expression . SUB expressionPrio1  (26)
	condition : expression LESSEQ expression .  (29)

	ADD  shift 45
	SUB  shift 46
	THEN  reduce 29


state 66
	expression : expression . ADD expressionPrio1  (25)
	expression : expression . SUB expressionPrio1  (26)
	condition : expression GREATEREQ expression .  (30)

	ADD  shift 45
	SUB  shift 46
	THEN  reduce 30


state 67
	expression : expression . ADD expressionPrio1  (25)
	expression : expression . SUB expressionPrio1  (26)
	condition : expression EQUALS expression .  (31)

	ADD  shift 45
	SUB  shift 46
	THEN  reduce 31


state 68
	expression : expression . ADD expressionPrio1  (25)
	expression : expression . SUB expressionPrio1  (26)
	condition : expression DIFF expression .  (32)

	ADD  shift 45
	SUB  shift 46
	THEN  reduce 32


state 69
	opt_statements : opt_statements . statement  (8)
	statement : IF condition THEN opt_statements . END  (11)
	statement : IF condition THEN opt_statements . ELSE opt_statements END  (12)

	END  shift 74
	LBRACKET  shift 22
	IF  shift 23
	ELSE  shift 75
	ID  shift 24
	.  error

	statement  goto 25
	cell  goto 26


state 70
	expressionPrio1 : expressionPrio1 MUL operand .  (21)

	.  reduce 21


state 71
	expressionPrio1 : expressionPrio1 DIV operand .  (22)

	.  reduce 22


state 72
	expressionPrio1 : expressionPrio1 MOD operand .  (23)

	.  reduce 23


state 73
	cell : LBRACKET INT COMMA INT RBRACKET .  (13)

	.  reduce 13


state 74
	statement : IF condition THEN opt_statements END .  (11)

	.  reduce 11


state 75
	statement : IF condition THEN opt_statements ELSE . opt_statements END  (12)
	opt_statements : .  (7)

	.  reduce 7

	opt_statements  goto 76


state 76
	opt_statements : opt_statements . statement  (8)
	statement : IF condition THEN opt_statements ELSE opt_statements . END  (12)

	END  shift 77
	LBRACKET  shift 22
	IF  shift 23
	ID  shift 24
	.  error

	statement  goto 25
	cell  goto 26


state 77
	statement : IF condition THEN opt_statements ELSE opt_statements END .  (12)

	.  reduce 12


31 terminals, 13 nonterminals
34 grammar rules, 78 states
